tests/negative/gold/bad_type2_test.gold
tests/negative/bad_type2_test.toit:10:7: error: Type annotation does not resolve to class or interface: 'C1'
foo x/C1: null
      ^~
tests/negative/bad_type2_test.toit:11:7: error: Ambiguous resolution of type: 'AmbiguousC'
bar x/AmbiguousC: null
      ^~~~~~~~~~
tests/negative/ambiguous_a.toit:10:7: note: Resolution candidate for 'AmbiguousC'
class AmbiguousC:
      ^~~~~~~~~~
tests/negative/ambiguous_b.toit:10:7: note: Resolution candidate for 'AmbiguousC'
class AmbiguousC:
      ^~~~~~~~~~
tests/negative/bad_type2_test.toit:12:7: error: Prefix can't be used as type: 'prefix'
gee x/prefix: null
      ^~~~~~
tests/negative/bad_type2_test.toit:14:10: error: Unexpected 'super' in type
foobar x/super: null
         ^~~~~
Compilation failed.
